# PCOptimizer

./: .gitignore  BUILD.md  CMakeLists.txt  PC Optimizer Premium - Финальный план с современным UI и полным User-mode.md  PROGRESS.md  QUICKSTART.md  README.md  vcpkg.json
src/: main.cpp  main_new.cpp
src/ai/: ai_analyzer.cpp  ai_analyzer.h
src/monitoring/: monitoring_engine.cpp  monitoring_engine.h
src/optimizers/: interrupt_optimizer.cpp  interrupt_optimizer.h  memory_optimizer.cpp  memory_optimizer.h  network_optimizer.cpp  network_optimizer.h  power_optimizer.cpp  power_optimizer.h  profile_manager.cpp  profile_manager.h  quantum_tweaker.cpp  quantum_tweaker.h  thread_optimizer.cpp  thread_optimizer.h  timer_optimizer.cpp  timer_optimizer.h
src/ui/components/: custom_button.cpp  custom_button.h  custom_card.cpp  custom_card.h  custom_toggle.cpp  custom_toggle.h  ui_common.cpp  ui_common.h
src/ui/navigation/: sidebar.cpp  sidebar.h  topbar.cpp  topbar.h
src/ui/pages/: dashboard.cpp  dashboard.h
src/ui/widgets/: base_widget.cpp  base_widget.h  cpu_widget.cpp  cpu_widget.h  gpu_widget.cpp  gpu_widget.h  quick_actions_widget.cpp  quick_actions_widget.h  ram_widget.cpp  ram_widget.h  widget_manager.cpp  widget_manager.h
